# aula09_bootcamp

./: README.md  logging_exemplo_erros.py  main.py  pyproject.toml  utils_log.py
